# dockym

./: .gitignore  README.md  install.sh  pyinstaller.spec  pyproject.toml
.github/scripts/: sync-version.py
.github/workflows/: build.yml  publish-pypi.yml
.hermes-agents/: agent1.json  agent2.json  agent3.json  board.json  compatibility-review.json  feature-plan.json  fix-batch-quick.json  fix-notifications-search.json  fix-scanner-events.json  fix-socket-compose.json  fix-titlebar.json  fix-ui-config.json  ui-ux-agent.json
src/dockym/: __init__.py  __main__.py  app.py
src/dockym/engine/: client.py  compose.py  events.py  scanner.py  templates.py
src/dockym/models/: config.py  project.py
src/dockym/ui/: action_panel.py  appearance_dialog.py  command_palette.py  env_dialog.py  exec_dialog.py  export_dialog.py  icons.py  logs_dialog.py  main_window.py  notification.py  project_tree.py  prune_dialog.py  service_table.py  settings_dialog.py  template_dialog.py  theme.py  title_bar.py  tray_manager.py
src/dockym/workers/: docker_worker.py
tools/: dev.py  screenshot.py
