[project]
name = "dockym"
version = "0.1.1"
description = "Native desktop GUI to manage Docker Compose services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jaime Luna", email = "jaimeparedes2000@gmail.com" },
]
keywords = ["docker", "compose", "desktop", "gui", "pyside6", "containers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Spanish",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "pyside6>=6.7",
    "docker>=7.0.0",
    "pyyaml>=6.0",
]

[project.urls]
homepage = "https://github.com/jaimepa17/dockym"
repository = "https://github.com/jaimepa17/dockym"
documentation = "https://github.com/jaimepa17/dockym/blob/main/README.md"
changelog = "https://github.com/jaimepa17/dockym/releases"
issues = "https://github.com/jaimepa17/dockym/issues"

[project.scripts]
dockym = "dockym:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "watchfiles>=0.21",
]

[tool.uv]
dev-dependencies = ["dockym[dev]"]

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"
